2006-08-21 [colin]	1.79.2cvs6

	* src/vcal_folder.c
	* src/vcal_manager.c
	* src/vcalendar.c
		Fix leaks

2006-08-18 [paul]	1.79.2cvs5

	* configure.ac
		bump up GLib and GTK+ minimum required versions,
		following Claws

2006-08-17 [colin]	1.79.2cvs4

	* src/vcal_folder.c
	* src/vcal_meeting_gtk.c
		Don't check SSL certificate (CURL default changed since 7.10)
                Better error report

2006-08-17 [colin]	1.79.2cvs3

	* src/vcal_manager.c
		Fix header encoding - header_len is the length
		of the prefixing header name, like 'Subject: ',
		not the actual content's length. Fixes infinite
		loops in codeconversion.

2006-08-13 [wwp]	1.79.2cvs2

	* src/vcal_manager.c
		fix strict ISO C90 compliance (and thus, compiling w/ gcc 2.x).
		Patch by Pawel Pekala <c0rn@o2.pl>.

2006-08-13 [colin]	1.79.2cvs1

	* src/vcal_meeting_gtk.c
		Fix account selection offset when there's
		NNTP accounts

2006-08-02 [paul]	1.79.2

	1.79.2 released

2006-07-04 [colin]	1.79.1cvs4

	* src/vcal_folder.c
	* src/vcal_manager.c
	* src/vcal_meeting_gtk.c
	* src/vcal_meeting_gtk.h
	* src/vcal_prefs.c
		Fix headers encoding
		Fix automatic export (asking for path 
		when disabled)

2006-06-16 [colin]	1.79.1cvs3

	* COPYING
		Add openssl exception clause

2006-06-15 [paul]	1.79.1cvs2

	* configure.ac
		Fix pthread detection as the included
		config.h isn't SC's anymore
		Thanks to Colin

2006-06-12 [colin]	1.79.1cvs1

	* src/plugin.c
	* src/vcal_manager.c
		Update to follow API

2006-06-12 [paul]	1.79.1

	1.79.1 released

2006-06-12 [paul]	1.79.0cvs5

	* po/Makefile.in.in
		fix autoconf warning

2006-06-12 [paul]	1.79.0cvs4

	* po/fr.po
		updated by Fabien Vantard

2006-06-08 [colin]	1.79.0cvs3

	* src/vcal_folder.c
	* src/vcal_manager.c
		Fix leaks

2006-06-06 [wwp]	1.79.0cvs2

	* configure.ac
	* src/.cvsignore
	* src/Makefile.am
	* src/plugin_version.h.in
	* src/plugin.c
		fix/unify/simplify autostuff, get rid of src/plugin_version.h{,.in} (use pluginconfig.h instead).
